<resources>
    <string name="app_name">playlist</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="properties">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
</resources>