<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="start"
            android:text="@string/properties"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/side_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="@dimen/side_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_small"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="@dimen/side_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_small"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="@dimen/side_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_small"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_user_agreement" />
    </LinearLayout>


</LinearLayout>