<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_weight="2"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_weight="7"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/search"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_weight="7"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/media"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_weight="7"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/properties"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />
</androidx.appcompat.widget.LinearLayoutCompat>